--- a/.github/workflows/BuildRM2100.yml
+++ b/.github/workflows/BuildRM2100.yml
@@ -1,4 +1,4 @@
-name: Build OpenWrt For RM2100 oswifi
+name: Build OpenWrt For RM2100
 
 on:
   repository_dispatch:
@@ -8,7 +8,7 @@ env:
   REPO_URL: https://github.com/Luastonsu/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: RM2100WiFi.config
+  CONFIG_FILE: RM2100.config
   DIY_P1_SH: custom.sh
   DIY_P2_SH: nothing.sh
   UPLOAD_BIN_DIR: false
